# metric-athlete-pod-ble

./: CHANGELOG.md  CLAUDE.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/pod_connector/: PodConnectorPlugin.kt  PodForegroundService.kt
example/: pubspec.yaml
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ios/: metric_athlete_pod_ble.podspec  pod_connector.podspec
ios/Classes/: PodBLECore.swift  PodConnectorPlugin.swift
lib/: metric_athlete_pod_ble.dart  pod_connector_method_channel.dart  pod_connector_platform_interface.dart
lib/models/: live_data_model.dart  pod_state_model.dart  sensor_log_model.dart  session_block_model.dart  session_stats_model.dart  stats_input_model.dart  usb_bounds_model.dart
lib/providers/: pod_notifier.dart
lib/services/: storage_service.dart  usb_file_processor.dart
lib/transport/: packet_reassembler.dart
lib/utils/: ble_command_queue.dart  butterworth_filter.dart  filter_pipeline.dart  kalman_gps_filter.dart  logs_binary_parser.dart  pod_logger.dart  pod_protocol_decoder.dart  session_cluster.dart  stats_calculator.dart  trajectory_filter.dart  usb_file_predictor.dart
macos/: metric_athlete_pod_ble.podspec  pod_connector.podspec
macos/Classes/: PodBLECore.swift  PodConnectorPlugin.swift
test/: binary_parser_test.dart  butterworth_filter_test.dart  filter_pipeline_test.dart  live_telemetry_test.dart  pod_connector_method_channel_test.dart  pod_connector_test.dart  pod_logger_test.dart  pod_protocol_decoder_test.dart  pod_state_model_test.dart  session_cluster_test.dart  stats_calculator_test.dart  trajectory_filter_test.dart
test/data/: nicus_20260303_test.dart
test/transport/: packet_reassembler_test.dart
windows/: CMakeLists.txt  pod_ble_core.cpp  pod_ble_core.h  pod_connector_plugin.cpp  pod_connector_plugin.h
windows/include/metric_athlete_pod_ble/: pod_connector_plugin_c_api.h
