cmake_minimum_required(VERSION 3.14)
set(PROJECT_NAME "pod_connector")
project(${PROJECT_NAME} LANGUAGES CXX)

# C++17 required for WinRT coroutines (co_await)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# This value is used when generating builds using this plugin, so it must
# not be changed
set(PLUGIN_NAME "pod_connector_plugin")

add_library(${PLUGIN_NAME} SHARED
  "pod_connector_plugin.cpp"
  "pod_connector_plugin.h"
  "pod_ble_core.cpp"
  "pod_ble_core.h"
)

apply_standard_settings(${PLUGIN_NAME})

set_target_properties(${PLUGIN_NAME} PROPERTIES
  CXX_VISIBILITY_PRESET hidden)

target_compile_definitions(${PLUGIN_NAME} PRIVATE FLUTTER_PLUGIN_IMPL)

target_include_directories(${PLUGIN_NAME} INTERFACE
  "${CMAKE_CURRENT_SOURCE_DIR}/include")

target_link_libraries(${PLUGIN_NAME} PRIVATE
  flutter
  flutter_wrapper_plugin
  windowsapp
)

# List of absolute paths to libraries that should be bundled with the plugin
set(pod_connector_bundled_libraries
  ""
  PARENT_SCOPE
)
